# cmakeproj

./: CMakeLists.txt  LICENSE  README.md
alg/: CMakeLists.txt  debug.c
cfg/: config.h.in
inc/: config.h
src/: CMakeLists.txt  t_main.c
